# fast-xxhash-android

./: .gitignore  README.md  README_CN.md  SECURITY.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android-test.yml  android.yml  build.yml  test.yml
androidApp/: build.gradle.kts
app/: build.gradle.kts
commonApp/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  build.gradle.kts
lib/src/androidDeviceTest/kotlin/io/github/limuyang2/xxhash/lib/: XXHashTest.kt
lib/src/androidMain/kotlin/io/github/limuyang2/xxhash/lib/: XXHash.android.kt  XXHashByteBuffer.android.kt
lib/src/androidTest/java/io/github/limuyang2/xxhash/lib/: XXHashTest.kt
lib/src/commonMain/kotlin/io/github/limuyang2/xxhash/lib/: XXHash.kt  XXHashExt.kt
lib/src/iosMain/kotlin/io/github/limuyang2/xxhash/lib/: XXHash.ios.kt
lib/src/iosSimulatorArm64Test/kotlin/io/github/limuyang2/xxhash/lib/: XXHashIosTest.kt
lib/src/jvmMain/kotlin/io/github/limuyang2/xxhash/lib/: XXHash.jvm.kt  XXHashByteBuffer.kt
lib/src/jvmTest/kotlin/io/github/limuyang2/xxhash/lib/: XXHashJvmTest.kt
lib/src/main/cpp/: xxhash_jni.c
lib/src/main/java/io/github/limuyang2/xxhash/lib/: XXHash.kt  XXHashExt.kt
lib/src/nativeInterop/cinterop/: xxhash.def
lib/src/webMain/kotlin/io/github/limuyang2/xxhash/lib/: XXH3WebPure.kt  XXHash.web.kt  XXHashWebPure.kt
lib/src/webTest/kotlin/io/github/limuyang2/xxhash/lib/: XXHashWebTest.kt
lib_android_native/: build.gradle.kts
webApp/: build.gradle.kts
(+30 files in other folders)
